kubernetes/1-deployment/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-server
  name: weather-server
  namespace: tls-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-server
  strategy: {}
  template:
    metadata:
      labels:
        app: weather-server
    spec:
      containers:
      - image: tls-demo:latest
        imagePullPolicy: IfNotPresent
        name: weather-server
        ports: 
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
