kubernetes/1-deployment/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-server
  name: weather-server
  namespace: tls-demo
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: weather-server
