kubernetes/1-deployment/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: gateway
    namespace: tls-demo
  spec:
    ingressClassName: nginx
    rules:
    - host: gateway.localtest.me
      http:
        paths:
        - backend:
            service:
              name: weather-gateway
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
